# klave-musig2-rust-app

./: Cargo.toml  README.md  build.sh  klave.json
apps/musig-compute/: Cargo.toml
apps/musig-compute/src/: bindings.rs  lib.rs  musig_agg.rs
apps/musig-compute/wit/: world.wit
apps/musig-wallet/: Cargo.toml
apps/musig-wallet/src/: bindings.rs  lib.rs
apps/musig-wallet/wit/: world.wit
