[package]
name = "musig-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.40.0", features = ["bitflags"] }
hex = "0.4.3"
klave = "0.3.0"
musig2 = {version = "0.2.4", default-features = false, features = ["secp256k1","serde"]}
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:musig-wallet"

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
strip = true
